# fcitx-hangul

./: CMakeLists.txt  INSTALL  README  config.h.in
cmake/: FindHangul.cmake
data/: CMakeLists.txt  fcitx-hangul.conf.in  fcitx-hangul.desc
list/: CMakeLists.txt  gen_list.c
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-hangul.pot  ja.po  ko.po  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  config.c  config.cpp  eim.c  eim.cpp  eim.h  hangul.conf.in  keyboard.c  keyboard.h  ustring.c  ustring.h
